--- a/app/src/main/res/layout/activity_owner.xml
+++ b/app/src/main/res/layout/activity_owner.xml
@@ -21,6 +21,7 @@
 
             <TextView
                 android:layout_marginLeft="10dp"
+                android:layout_marginTop="4dp"
                 android:layout_width="70dp"
                 android:layout_height="30dp"
                 android:gravity="center"
